# Website-Clone-Using-LLM

./: README.md
backend/: .env  hello.py  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/actions/: CloneWebsite.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LoadingCloningUI.tsx  WebsiteForm.tsx  WebsitePreview.tsx
